# velvet-sojourner

./: .gitignore  AGENTFORGE.md  APP_UPDATE_LOG.md  CHANGELOG.md  COMPLETE_GUIDE.txt  COMPREHENSIVE_ACTION_PLAN.md  DEPLOYMENT_CHECKLIST.md  DOCS_INVENTORY.md  E_DRIVE_AUDIT_DATA.json  FINAL_BUILD_REPORT.md  FINAL_ENHANCEMENT_REPORT.md  FINAL_REPORT.md  FULL_DETAILED_REPORT.md  GUMROAD_LISTING.md  IMPLEMENTATION_COMPLETE.md  LAUNCH_ALL.md  LAUNCH_CHECKLIST.md  LAUNCH_PLAN_20AUD.md  LAUNCH_READY.md  LAUNCH_RUNBOOK.md  LAUNCH_SEQUENCE.md  LAUNCH_STATUS.md  MARKETING_VALUATION_AUDIT.md  MASTER_CHECKLIST.md  MASTER_REPO_DIRECTORY.md  OUTREACH_CONTENT.md  PROJECT_STATE.md  PROJECT_SUMMARY.md  README.md  README_APP.md  REPO_CLASSIFICATION.md  REPO_INVENTORY.md  REVENUE_TRACKER.md  SYSTEM_OVERVIEW.md  TEST_PLAN.md  VALUATION_REPORT.md  _analyze_repos.py  _inspect_uncategorized.py  _list_repos.py  _repo_list.txt  (+103 more)
skill-scan/: .gitignore  .pre-commit-hooks.yaml  .skill-scan-allowlist.yaml  CHANGELOG.md  README.md  pyproject.toml
skill-scan/.github/workflows/: release.yml  scan.yml
skill-scan/contrib/homebrew/: skill-scan.rb
skill-scan/docs/: index.html
skill-scan/landing/: index.html
skill-scan/pro/: README.md
skill-scan/skill_scan/: __init__.py  __main__.py  allowlist.py  cli.py  engine.py  models.py  updater.py
skill-scan/skill_scan/parsers/: __init__.py  script.py  skill_md.py
skill-scan/skill_scan/reporters/: __init__.py  html.py  json_reporter.py  terminal.py
skill-scan/skill_scan/rules/: __init__.py  base.py  code_exec.py  exfiltration.py  file_access.py  network.py  obfuscation.py  prompt_injection.py  (+3 more)
skill-scan/tests/: smoke_test.py  test_additional_rules.py  test_benchmark.py  test_engine.py  test_integration.py
(+1260 files in other folders)
