[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-scan"
version = "0.1.0"
description = "Security scanner for AI agent skills (SKILL.md)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["security", "ai-agents", "skills", "scanner", "llm", "agent-security"]

authors = [
    {name = "Velvet Sojourner"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/velvet-sojourner/skill-scan"
Documentation = "https://github.com/velvet-sojourner/skill-scan#readme"
Source = "https://github.com/velvet-sojourner/skill-scan"
BugTracker = "https://github.com/velvet-sojourner/skill-scan/issues"

[project.scripts]
skill-scan = "skill_scan.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["skill_scan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
